gap issues

--- a/positionstyles.css
+++ b/positionstyles.css
@@ -72,8 +72,8 @@ gap: 20px;
 .content3 {
   /* This is the parent of the activity 3 boxes. */
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 100px 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-column-gap: 50px;
   grid-row-gap: 0;
 
